Update schema.  Comment functional tests. All tests passing but Repl crashes intermittently after running tests.

--- a/views/issue.html
+++ b/views/issue.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Issue Tracker - Project Page</title>
-    <link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png" />
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/style.css">
-  </head>
-  <body>
-    <header>
-      <h1 id='projectTitle'></h1>
-    </header>
-    <center>
-      <div id='submitNewIssue'>
-        <br>
+
+<head>
+	<title>Issue Tracker - Project Page</title>
+	<link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png" />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/public/style.css">
+</head>
+
+<body>
+	<header>
+		<h1 id='projectTitle'></h1>
+	</header>
+	<center>
+		<div id='submitNewIssue'>
+			<br>
         <h3>Submit a new issue:</h3>
         <form id="newIssue" method="post" action="/api/">
-          <input type="text" name="issue_title" placeholder="*Title" style="width: 320px; margin-bottom: 3px;" required=''><br>
-          <textarea type="text" name="issue_text" placeholder="*Text" style="width: 320px; height: 100px;" required=''></textarea><br>
-          <input type="text" name="created_by" placeholder="*Created by" style="width: 100px" required=''>
+          <input type="text" name="issue_title" placeholder="*Title" style="width: 320px; margin-bottom: 3px;" required='true'><br>
+          <textarea type="text" name="issue_text" placeholder="*Text" style="width: 320px; height: 100px;" required='required'></textarea><br>
+          <input type="text" name="created_by" placeholder="*Created by" style="width: 100px" required='true'>
           <input type="text" name="assigned_to" placeholder="(opt)Assigned to" style="width: 100px">
           <input type="text" name="status_text" placeholder="(opt)Status text" style="width: 100px"><br>
           <button type="submit">Submit Issue</button>
